syntax = "proto3";

import "google/protobuf/empty.proto";
import "swoq.proto";

package Swoq.Interface;

service MonitorService {
    rpc Monitor(google.protobuf.Empty) returns (stream Update);
}

message QuestStarted {
    string gameId = 1;
    string userName = 2;
    StartRequest request = 3;
    StartResponse response = 4;
}

message QuestActed {
    string gameId = 1;
    ActionRequest request = 2;
    ActionResponse response = 3;
}

message QueueUpdate {
    repeated string queuedUsers = 1;
}

message Update {
    optional QuestStarted started = 1;
    optional QuestActed acted = 2;
    optional QueueUpdate queueUpdate = 3;
}
